-
Bug
-
Resolution: Fixed
-
P1: Critical
-
None
-
6.8.5
-
None
-
-
2
-
a3572dd5e (dev), 02814dd94 (6.10), 5c4e8ba2b (6.9), 1d5287d4a (tqtc/lts-6.8), 6a72e7e10 (tqtc/lts-6.5)
-
Foundation Sprint 139, Foundation Sprint 140
Qt 6.8.5 fails to build on VxWorks 24.03, while it builds on VxWorks 25.03.
The compiler difference is clang 17.0.6.3 vs 17.0.6.1
In file included from /home/karim/VxWorks/qtbuild/target_684devdiscovery/qtbase/include/QtCore/qdatastream.h:1:
/home/karim/src/qt68vx/tqtc-qt5/qtbase/src/corelib/serialization/qdatastream.h:296:19: error: implicit conversion loses integer precision: 'qint64' (aka 'long long') to 'qsizetype' (aka 'int') [-Werror,-Wshorten-64-to-32]
296 | qsizetype n = size;
| ~ ^~~~
/home/karim/src/qt68vx/tqtc-qt5/qtbase/src/corelib/serialization/qdatastream.h:322:19: error: implicit conversion loses integer precision: 'qint64' (aka 'long long') to 'qsizetype' (aka 'int') [-Werror,-Wshorten-64-to-32]
322 | qsizetype n = size;
| ~ ^~~~
/home/karim/src/qt68vx/tqtc-qt5/qtbase/src/corelib/serialization/qdatastream.h:347:19: error: implicit conversion loses integer precision: 'qint64' (aka 'long long') to 'qsizetype' (aka 'int') [-Werror,-Wshorten-64-to-32]
347 | qsizetype n = size;
| ~ ^~~~
In file included from /home/karim/VxWorks/qtbuild/target_684devdiscovery/qtbase/src/plugins/generic/evdevmouse/QEvdevMousePlugin_init.cpp:1:
In file included from /home/karim/VxWorks/qtbuild/target_684devdiscovery/qtbase/include/QtCore/QtPlugin:1:
In file included from /home/karim/VxWorks/qtbuild/target_684devdiscovery/qtbase/include/QtCore/qplugin.h:1:
In file included from /home/karim/src/qt68vx/tqtc-qt5/qtbase/src/corelib/plugin/qplugin.h:14:
In file included from /home/karim/VxWorks/qtbuild/target_684devdiscovery/qtbase/include/QtCore/qjsonobject.h:1:
/home/karim/src/qt68vx/tqtc-qt5/qtbase/src/corelib/serialization/qjsonobject.h:130:67: error: implicit conversion loses integer precision: 'quint64' (aka 'unsigned long long') to 'qsizetype' (aka 'int') [-Werror,-Wshorten-64-to-32]
130 | qsizetype operator-(iterator j) const { return item.index - j.item.index; }
| ~~~~~~ ~~~~~~~~~~^~~~~~~~~~~~~
/home/karim/src/qt68vx/tqtc-qt5/qtbase/src/corelib/serialization/qjsonobject.h:242:73: error: implicit conversion loses integer precision: 'quint64' (aka 'unsigned long long') to 'qsizetype' (aka 'int') [-Werror,-Wshorten-64-to-32]
242 | qsizetype operator-(const_iterator j) const { return item.index - j.item.index; }
| ~~~~~~ ~~~~~~~~~~^~~~~~~~~~~~~
5 errors generated.
| For Gerrit Dashboard: QTBUG-139951 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 674096,3 | QJsonObject: fix -Werror,-Wshorten-64-to-32 on 32-bit platforms | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 674470,2 | QJsonObject: fix -Werror,-Wshorten-64-to-32 on 32-bit platforms | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
| 675173,2 | QJsonObject: fix -Werror,-Wshorten-64-to-32 on 32-bit platforms | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 675238,2 | QJsonObject: fix -Werror,-Wshorten-64-to-32 on 32-bit platforms | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
| 675327,3 | QJsonObject: fix -Werror,-Wshorten-64-to-32 on 32-bit platforms | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |