QJsonObject: fix -Werror,-Wshorten-64-to-32 on 32-bit platforms

The `index` member is a quint64 bitfield, so on 32-bit platforms,
where qsizetype is just int, the return expression, indeed, narrows,
causing warnings, which may break the build if -Werror is in effect
(either for the Qt build itself, or, seeing as this is a public
header, for user projects).

Pick-to: 6.9 6.8 6.5
Task-number: QTBUG-139951
Change-Id: I06602ce85234207cf90e1acbbbba4d89998ac399
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
(cherry picked from commit a3572dd5e8a27e6c308255ddcf05de4dc9036cdd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>